remove 'DeploymentScenario' from terraform-boot
