# modules/deployment/src/main/java/org/eclipse/xpanse/modules/deployment/deployers/terraform/terraformboot/generated/model/TerraformDeployWithScriptsRequest.java
@@ -2,7 +2,7 @@
  * Terraform-Boot API
  * RESTful Services to interact with Terraform-Boot runtime
  *
- * The version of the OpenAPI document: 1.0.5-SNAPSHOT
+ * The version of the OpenAPI document: 1.0.6-SNAPSHOT
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -13,27 +13,20 @@
 
 package org.eclipse.xpanse.modules.deployment.deployers.terraform.terraformboot.generated.model;
 
-import java.util.Objects;
-import java.util.Arrays;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonTypeName;
-import com.fasterxml.jackson.annotation.JsonValue;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import com.fasterxml.jackson.annotation.JsonPropertyOrder;
-import com.fasterxml.jackson.annotation.JsonTypeName;
+import java.util.Objects;
 
 /**
  * TerraformDeployWithScriptsRequest
  */
 @JsonPropertyOrder({
   TerraformDeployWithScriptsRequest.JSON_PROPERTY_IS_PLAN_ONLY,
-  TerraformDeployWithScriptsRequest.JSON_PROPERTY_DEPLOYMENT_SCENARIO,
   TerraformDeployWithScriptsRequest.JSON_PROPERTY_VARIABLES,
   TerraformDeployWithScriptsRequest.JSON_PROPERTY_ENV_VARIABLES,
   TerraformDeployWithScriptsRequest.JSON_PROPERTY_SCRIPTS
@@ -42,50 +35,6 @@ import com.fasterxml.jackson.annotation.JsonTypeName;
 public class TerraformDeployWithScriptsRequest {
   public static final String JSON_PROPERTY_IS_PLAN_ONLY = "isPlanOnly";
   private Boolean isPlanOnly;
-
-  /**
-   * The deployment scenario when the Xpanse client send the destroy request. Valid values: deploy,modify,destroy,rollback,purge.
-   */
-  public enum DeploymentScenarioEnum {
-    DEPLOY("deploy"),
-    
-    MODIFY("modify"),
-    
-    DESTROY("destroy"),
-    
-    ROLLBACK("rollback"),
-    
-    PURGE("purge");
-
-    private String value;
-
-    DeploymentScenarioEnum(String value) {
-      this.value = value;
-    }
-
-    @JsonValue
-    public String getValue() {
-      return value;
-    }
-
-    @Override
-    public String toString() {
-      return String.valueOf(value);
-    }
-
-    @JsonCreator
-    public static DeploymentScenarioEnum fromValue(String value) {
-      for (DeploymentScenarioEnum b : DeploymentScenarioEnum.values()) {
-        if (b.value.equals(value)) {
-          return b;
-        }
-      }
-      throw new IllegalArgumentException("Unexpected value '" + value + "'");
-    }
-  }
-
-  public static final String JSON_PROPERTY_DEPLOYMENT_SCENARIO = "deploymentScenario";
-  private DeploymentScenarioEnum deploymentScenario;
 
   public static final String JSON_PROPERTY_VARIABLES = "variables";
   private Map<String, Object> variables = new HashMap<>();
@@ -122,32 +71,6 @@ public class TerraformDeployWithScriptsRequest {
   @JsonInclude(value = JsonInclude.Include.ALWAYS)
   public void setIsPlanOnly(Boolean isPlanOnly) {
     this.isPlanOnly = isPlanOnly;
-  }
-
-
-  public TerraformDeployWithScriptsRequest deploymentScenario(DeploymentScenarioEnum deploymentScenario) {
-    
-    this.deploymentScenario = deploymentScenario;
-    return this;
-  }
-
-   /**
-   * The deployment scenario when the Xpanse client send the destroy request. Valid values: deploy,modify,destroy,rollback,purge.
-   * @return deploymentScenario
-  **/
-  @jakarta.annotation.Nullable
-  @JsonProperty(JSON_PROPERTY_DEPLOYMENT_SCENARIO)
-  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
-
-  public DeploymentScenarioEnum getDeploymentScenario() {
-    return deploymentScenario;
-  }
-
-
-  @JsonProperty(JSON_PROPERTY_DEPLOYMENT_SCENARIO)
-  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
-  public void setDeploymentScenario(DeploymentScenarioEnum deploymentScenario) {
-    this.deploymentScenario = deploymentScenario;
   }
 
 
@@ -259,7 +182,6 @@ public class TerraformDeployWithScriptsRequest {
     }
     TerraformDeployWithScriptsRequest terraformDeployWithScriptsRequest = (TerraformDeployWithScriptsRequest) o;
     return Objects.equals(this.isPlanOnly, terraformDeployWithScriptsRequest.isPlanOnly) &&
-        Objects.equals(this.deploymentScenario, terraformDeployWithScriptsRequest.deploymentScenario) &&
         Objects.equals(this.variables, terraformDeployWithScriptsRequest.variables) &&
         Objects.equals(this.envVariables, terraformDeployWithScriptsRequest.envVariables) &&
         Objects.equals(this.scripts, terraformDeployWithScriptsRequest.scripts);
@@ -267,20 +189,18 @@ public class TerraformDeployWithScriptsRequest {
 
   @Override
   public int hashCode() {
-    return Objects.hash(isPlanOnly, deploymentScenario, variables, envVariables, scripts);
+    return Objects.hash(isPlanOnly, variables, envVariables, scripts);
   }
 
   @Override
   public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class TerraformDeployWithScriptsRequest {\n");
-    sb.append("    isPlanOnly: ").append(toIndentedString(isPlanOnly)).append("\n");
-    sb.append("    deploymentScenario: ").append(toIndentedString(deploymentScenario)).append("\n");
-    sb.append("    variables: ").append(toIndentedString(variables)).append("\n");
-    sb.append("    envVariables: ").append(toIndentedString(envVariables)).append("\n");
-    sb.append("    scripts: ").append(toIndentedString(scripts)).append("\n");
-    sb.append("}");
-    return sb.toString();
+    String sb = "class TerraformDeployWithScriptsRequest {\n"
+            + "    isPlanOnly: " + toIndentedString(isPlanOnly) + "\n"
+            + "    variables: " + toIndentedString(variables) + "\n"
+            + "    envVariables: " + toIndentedString(envVariables) + "\n"
+            + "    scripts: " + toIndentedString(scripts) + "\n"
+            + "}";
+    return sb;
   }
 
   /**
