# modules/deployment/src/main/java/org/eclipse/xpanse/modules/deployment/deployers/terraform/terraformboot/generated/model/TerraformDestroyWithScriptsRequest.java
@@ -2,7 +2,7 @@
  * Terraform-Boot API
  * RESTful Services to interact with Terraform-Boot runtime
  *
- * The version of the OpenAPI document: 1.0.5-SNAPSHOT
+ * The version of the OpenAPI document: 1.0.6-SNAPSHOT
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -13,26 +13,19 @@
 
 package org.eclipse.xpanse.modules.deployment.deployers.terraform.terraformboot.generated.model;
 
-import java.util.Objects;
-import java.util.Arrays;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonTypeName;
-import com.fasterxml.jackson.annotation.JsonValue;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import com.fasterxml.jackson.annotation.JsonPropertyOrder;
-import com.fasterxml.jackson.annotation.JsonTypeName;
+import java.util.Objects;
 
 /**
  * TerraformDestroyWithScriptsRequest
  */
 @JsonPropertyOrder({
-  TerraformDestroyWithScriptsRequest.JSON_PROPERTY_DEPLOYMENT_SCENARIO,
   TerraformDestroyWithScriptsRequest.JSON_PROPERTY_VARIABLES,
   TerraformDestroyWithScriptsRequest.JSON_PROPERTY_ENV_VARIABLES,
   TerraformDestroyWithScriptsRequest.JSON_PROPERTY_SCRIPTS,
@@ -40,50 +33,6 @@ import com.fasterxml.jackson.annotation.JsonTypeName;
 })
 @jakarta.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", comments = "Generator version: 7.4.0")
 public class TerraformDestroyWithScriptsRequest {
-  /**
-   * The deployment scenario when the Xpanse client send the destroy request. Valid values: deploy,modify,destroy,rollback,purge.
-   */
-  public enum DeploymentScenarioEnum {
-    DEPLOY("deploy"),
-    
-    MODIFY("modify"),
-    
-    DESTROY("destroy"),
-    
-    ROLLBACK("rollback"),
-    
-    PURGE("purge");
-
-    private String value;
-
-    DeploymentScenarioEnum(String value) {
-      this.value = value;
-    }
-
-    @JsonValue
-    public String getValue() {
-      return value;
-    }
-
-    @Override
-    public String toString() {
-      return String.valueOf(value);
-    }
-
-    @JsonCreator
-    public static DeploymentScenarioEnum fromValue(String value) {
-      for (DeploymentScenarioEnum b : DeploymentScenarioEnum.values()) {
-        if (b.value.equals(value)) {
-          return b;
-        }
-      }
-      throw new IllegalArgumentException("Unexpected value '" + value + "'");
-    }
-  }
-
-  public static final String JSON_PROPERTY_DEPLOYMENT_SCENARIO = "deploymentScenario";
-  private DeploymentScenarioEnum deploymentScenario;
-
   public static final String JSON_PROPERTY_VARIABLES = "variables";
   private Map<String, Object> variables = new HashMap<>();
 
@@ -98,32 +47,6 @@ public class TerraformDestroyWithScriptsRequest {
 
   public TerraformDestroyWithScriptsRequest() {
   }
-
-  public TerraformDestroyWithScriptsRequest deploymentScenario(DeploymentScenarioEnum deploymentScenario) {
-    
-    this.deploymentScenario = deploymentScenario;
-    return this;
-  }
-
-   /**
-   * The deployment scenario when the Xpanse client send the destroy request. Valid values: deploy,modify,destroy,rollback,purge.
-   * @return deploymentScenario
-  **/
-  @jakarta.annotation.Nullable
-  @JsonProperty(JSON_PROPERTY_DEPLOYMENT_SCENARIO)
-  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
-
-  public DeploymentScenarioEnum getDeploymentScenario() {
-    return deploymentScenario;
-  }
-
-
-  @JsonProperty(JSON_PROPERTY_DEPLOYMENT_SCENARIO)
-  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
-  public void setDeploymentScenario(DeploymentScenarioEnum deploymentScenario) {
-    this.deploymentScenario = deploymentScenario;
-  }
-
 
   public TerraformDestroyWithScriptsRequest variables(Map<String, Object> variables) {
     
@@ -258,8 +181,7 @@ public class TerraformDestroyWithScriptsRequest {
       return false;
     }
     TerraformDestroyWithScriptsRequest terraformDestroyWithScriptsRequest = (TerraformDestroyWithScriptsRequest) o;
-    return Objects.equals(this.deploymentScenario, terraformDestroyWithScriptsRequest.deploymentScenario) &&
-        Objects.equals(this.variables, terraformDestroyWithScriptsRequest.variables) &&
+    return Objects.equals(this.variables, terraformDestroyWithScriptsRequest.variables) &&
         Objects.equals(this.envVariables, terraformDestroyWithScriptsRequest.envVariables) &&
         Objects.equals(this.scripts, terraformDestroyWithScriptsRequest.scripts) &&
         Objects.equals(this.tfState, terraformDestroyWithScriptsRequest.tfState);
@@ -267,20 +189,18 @@ public class TerraformDestroyWithScriptsRequest {
 
   @Override
   public int hashCode() {
-    return Objects.hash(deploymentScenario, variables, envVariables, scripts, tfState);
+    return Objects.hash(variables, envVariables, scripts, tfState);
   }
 
   @Override
   public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class TerraformDestroyWithScriptsRequest {\n");
-    sb.append("    deploymentScenario: ").append(toIndentedString(deploymentScenario)).append("\n");
-    sb.append("    variables: ").append(toIndentedString(variables)).append("\n");
-    sb.append("    envVariables: ").append(toIndentedString(envVariables)).append("\n");
-    sb.append("    scripts: ").append(toIndentedString(scripts)).append("\n");
-    sb.append("    tfState: ").append(toIndentedString(tfState)).append("\n");
-    sb.append("}");
-    return sb.toString();
+    String sb = "class TerraformDestroyWithScriptsRequest {\n"
+            + "    variables: " + toIndentedString(variables) + "\n"
+            + "    envVariables: " + toIndentedString(envVariables) + "\n"
+            + "    scripts: " + toIndentedString(scripts) + "\n"
+            + "    tfState: " + toIndentedString(tfState) + "\n"
+            + "}";
+    return sb;
   }
 
   /**
