# modules/deployment/src/main/java/org/eclipse/xpanse/modules/deployment/deployers/terraform/terraformboot/generated/model/TerraformModifyFromDirectoryRequest.java
@@ -2,7 +2,7 @@
  * Terraform-Boot API
  * RESTful Services to interact with Terraform-Boot runtime
  *
- * The version of the OpenAPI document: 1.0.5-SNAPSHOT
+ * The version of the OpenAPI document: 1.0.6-SNAPSHOT
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -13,24 +13,18 @@
 
 package org.eclipse.xpanse.modules.deployment.deployers.terraform.terraformboot.generated.model;
 
-import java.util.Objects;
-import java.util.Arrays;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonTypeName;
-import com.fasterxml.jackson.annotation.JsonValue;
+import com.fasterxml.jackson.annotation.JsonPropertyOrder;
 import java.util.HashMap;
 import java.util.Map;
-import com.fasterxml.jackson.annotation.JsonPropertyOrder;
-import com.fasterxml.jackson.annotation.JsonTypeName;
+import java.util.Objects;
 
 /**
  * TerraformModifyFromDirectoryRequest
  */
 @JsonPropertyOrder({
   TerraformModifyFromDirectoryRequest.JSON_PROPERTY_IS_PLAN_ONLY,
-  TerraformModifyFromDirectoryRequest.JSON_PROPERTY_DEPLOYMENT_SCENARIO,
   TerraformModifyFromDirectoryRequest.JSON_PROPERTY_VARIABLES,
   TerraformModifyFromDirectoryRequest.JSON_PROPERTY_ENV_VARIABLES
 })
@@ -38,50 +32,6 @@ import com.fasterxml.jackson.annotation.JsonTypeName;
 public class TerraformModifyFromDirectoryRequest {
   public static final String JSON_PROPERTY_IS_PLAN_ONLY = "isPlanOnly";
   private Boolean isPlanOnly;
-
-  /**
-   * The deployment scenario when the Xpanse client send the destroy request. Valid values: deploy,modify,destroy,rollback,purge.
-   */
-  public enum DeploymentScenarioEnum {
-    DEPLOY("deploy"),
-    
-    MODIFY("modify"),
-    
-    DESTROY("destroy"),
-    
-    ROLLBACK("rollback"),
-    
-    PURGE("purge");
-
-    private String value;
-
-    DeploymentScenarioEnum(String value) {
-      this.value = value;
-    }
-
-    @JsonValue
-    public String getValue() {
-      return value;
-    }
-
-    @Override
-    public String toString() {
-      return String.valueOf(value);
-    }
-
-    @JsonCreator
-    public static DeploymentScenarioEnum fromValue(String value) {
-      for (DeploymentScenarioEnum b : DeploymentScenarioEnum.values()) {
-        if (b.value.equals(value)) {
-          return b;
-        }
-      }
-      throw new IllegalArgumentException("Unexpected value '" + value + "'");
-    }
-  }
-
-  public static final String JSON_PROPERTY_DEPLOYMENT_SCENARIO = "deploymentScenario";
-  private DeploymentScenarioEnum deploymentScenario;
 
   public static final String JSON_PROPERTY_VARIABLES = "variables";
   private Map<String, Object> variables = new HashMap<>();
@@ -115,32 +65,6 @@ public class TerraformModifyFromDirectoryRequest {
   @JsonInclude(value = JsonInclude.Include.ALWAYS)
   public void setIsPlanOnly(Boolean isPlanOnly) {
     this.isPlanOnly = isPlanOnly;
-  }
-
-
-  public TerraformModifyFromDirectoryRequest deploymentScenario(DeploymentScenarioEnum deploymentScenario) {
-    
-    this.deploymentScenario = deploymentScenario;
-    return this;
-  }
-
-   /**
-   * The deployment scenario when the Xpanse client send the destroy request. Valid values: deploy,modify,destroy,rollback,purge.
-   * @return deploymentScenario
-  **/
-  @jakarta.annotation.Nullable
-  @JsonProperty(JSON_PROPERTY_DEPLOYMENT_SCENARIO)
-  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
-
-  public DeploymentScenarioEnum getDeploymentScenario() {
-    return deploymentScenario;
-  }
-
-
-  @JsonProperty(JSON_PROPERTY_DEPLOYMENT_SCENARIO)
-  @JsonInclude(value = JsonInclude.Include.USE_DEFAULTS)
-  public void setDeploymentScenario(DeploymentScenarioEnum deploymentScenario) {
-    this.deploymentScenario = deploymentScenario;
   }
 
 
@@ -218,26 +142,23 @@ public class TerraformModifyFromDirectoryRequest {
     }
     TerraformModifyFromDirectoryRequest terraformModifyFromDirectoryRequest = (TerraformModifyFromDirectoryRequest) o;
     return Objects.equals(this.isPlanOnly, terraformModifyFromDirectoryRequest.isPlanOnly) &&
-        Objects.equals(this.deploymentScenario, terraformModifyFromDirectoryRequest.deploymentScenario) &&
         Objects.equals(this.variables, terraformModifyFromDirectoryRequest.variables) &&
         Objects.equals(this.envVariables, terraformModifyFromDirectoryRequest.envVariables);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(isPlanOnly, deploymentScenario, variables, envVariables);
+    return Objects.hash(isPlanOnly, variables, envVariables);
   }
 
   @Override
   public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class TerraformModifyFromDirectoryRequest {\n");
-    sb.append("    isPlanOnly: ").append(toIndentedString(isPlanOnly)).append("\n");
-    sb.append("    deploymentScenario: ").append(toIndentedString(deploymentScenario)).append("\n");
-    sb.append("    variables: ").append(toIndentedString(variables)).append("\n");
-    sb.append("    envVariables: ").append(toIndentedString(envVariables)).append("\n");
-    sb.append("}");
-    return sb.toString();
+    String sb = "class TerraformModifyFromDirectoryRequest {\n"
+            + "    isPlanOnly: " + toIndentedString(isPlanOnly) + "\n"
+            + "    variables: " + toIndentedString(variables) + "\n"
+            + "    envVariables: " + toIndentedString(envVariables) + "\n"
+            + "}";
+    return sb;
   }
 
   /**
